_archive/governance-services/2.2/concepts/rm-fileplan-manage.md
---
author: Alfresco Documentation
source: 
audience: [, ]
category: User Help
option: Records Management
---

# Managing the File Plan

The record categories, record folders, and records in the File Plan structure each have an appropriate set of actions. You can access the actions by hovering over an item in the File Plan or by clicking on an item name. Use these actions to manage the File Plan.

**Note:** The standard Alfresco **Copy to**, **Move to** and renaming options are available for record categories, record folders, and records. See [Keeping your library organized](http://docs.alfresco.com/4.2/concepts/library-organize.html) for further details.

-   **[../tasks/rm-recordcategory-manage.md](../tasks/rm-recordcategory-manage.md)**  

-   **[../tasks/rm-recordfolder-manage.md](../tasks/rm-recordfolder-manage.md)**  

-   **[../tasks/rm-records-manage.md](../tasks/rm-records-manage.md)**  

-   **[Managing records holds](../concepts/rm-manage-holds.md)**  
You can add records and folders to a hold to freeze them and suspend their retention schedules.
-   **[Exporting and importing File Plan content](../concepts/rm-export-import.md)**  
You can quickly and easily import and export Records Management content, from individual record folders through to an entire File Plan.

**Parent topic:**[Using Records Management](../concepts/rm-intro.md)

